--- a/static/styles.css
+++ b/static/styles.css
@@ -1,10 +1,7 @@
 /* General Styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
-    color: #333;
     margin: 0;
-    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -152,6 +149,26 @@ button:hover {
     background-color: #c0392b;
 }
 
+nav.navbar {
+    width: 100%;
+    margin: 0;
+    padding: 0.5rem 1rem;
+}
+
+.container {
+    padding-top: 20px;
+}
+
+.navbar-brand{
+    color: #2980b9 !important;
+    font-weight: bold !important;
+    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.2) !important;
+
+}
+
+button, .btn {
+    border-radius: 50px !important;
+}
 
 /* Responsive Design */
 @media (max-width: 800px) {
@@ -171,3 +188,5 @@ button:hover {
         width: 90%;
     }
 }
+
+
