Implemented Nutritionix API

--- a/static/styles.css
+++ b/static/styles.css
@@ -54,15 +54,15 @@ form {
     text-align: center;
 }
 
-input[type="text"], 
+input[type="text"],
 input[type="number"] {
-    width: 90%; 
+    width: 90%;
     padding: 10px;
-    margin: 0 auto 10px auto; 
+    margin: 0 auto 10px auto;
     border: 1px solid #ddd;
     border-radius: 4px;
     font-size: 16px;
-    display: block; 
+    display: block;
 }
 
 button {
@@ -74,7 +74,7 @@ button {
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    width: 90%; 
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -146,7 +146,7 @@ button:hover {
 #foodList li button {
     padding: 5px 10px;
     font-size: 14px;
-    width: auto; 
+    width: auto;
 }
 
 #foodList li button.edit {
@@ -175,22 +175,23 @@ nav.navbar {
     padding-top: 20px;
 }
 
-.navbar-brand{
+.navbar-brand {
     color: #2980b9 !important;
     font-weight: bold !important;
     text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.2) !important;
 
 }
 
-button, .btn {
+button,
+.btn {
     border-radius: 50px !important;
 }
 
-.modal-footer{
+.modal-footer {
     justify-content: center !important;
 }
 
-.authButton{
+.authButton {
     background-color: #2980b9 !important;
 }
 
@@ -199,18 +200,16 @@ button, .btn {
     .container {
         flex-direction: column;
     }
-    
+
     body {
         padding: 10px;
     }
-    
+
     form {
         padding: 15px;
     }
-    
+
     button {
         width: 90%;
     }
 }
-
-
